--- a/css/main.css
+++ b/css/main.css
@@ -481,7 +481,7 @@ a.home_container_btn:hover {
 
 .home {
     display: block;
-    background: url(./img/bg.png) no-repeat;
+    background: url(/img/bg.png) no-repeat;
     background-position: center top;
     background-size: cover;
     background-attachment: scroll;
